fix: delete lists on role and permissions models, add missing tests and export jacoco info